--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -188,7 +188,7 @@ PIN &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text">&nbsp;&nbsp;&nbsp;&nb
 
 <br>
 <h4><a href="/ts-tssbtet-results">Links TS SBTET Diploma results March/April 2017 will be Update Once Results Released 
-<u>Check Out Your Results Are Going To Be Released By TS SBTET</u> <span class="text-danger">(Links Not Yet Updated)</span></a></h4>
+<u>Check Out Your Results Are Going To Be Released By TS SBTET</u></a></h4>
 <br>
 <div class="text-center">
 <b>
