--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -23,12 +23,12 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="RESULTS ARE RELEASED"
+    document.getElementById('demo').innerHTML="RESULTS ARE RELEASED, TRY AGAIN"
     window.open("http://www.sbtetworld.in/2017/04/ts-sbtet-diploma-results-2017.html");
-    myVar=setInterval(time, 3000);
-    function time(){
-        location.reload()
-    }
+    // myVar=setInterval(time, 3000);
+    // function time(){
+    //     location.reload()
+    // }
     
 }
 </script>
