--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -45,9 +45,9 @@
 State Board of Technical Education, Andhra Pradesh successfully conducted Diploma / Polytechnic Courses (C-16, C-14, C-09, & ER- 91Pharmacy) Regular and Backlogs Examinations in the months of March/April  2017 examinations for C09, C16 & ER 91 schemes Commencement of theory examinations for C14 schemes 23-03-2017 (Thursday) 06-04-2017 (Thursday) at different exam centers across the AP. A large number of Students appeared for the SBTET examination. All the candidates who had appeared for the exam are eagerly waiting for the sbtet diploma results. Now, the wait is over, AP SBTET is going to be declare sbtet results C16, C14, 09 1st  year, 3rd  sem, 4th  sem, 5th  sem, 6th sem and 7th Semester very soon. Candidates can check the results from the direct link provided below and fill Form and get direct results through Mail and sms.
 </p>
 
-<br>
+<!-- <br>
 <div class="text-center" '>
-<h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div>
+<h3><a href='http://www.neetgov.in/users/sign_up'>ECET 2017 ONLINE MOCK TEST REGISTRATIONS CLICK HERE</a><a href='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif' imageanchor='1' style='margin-left: 1em; margin-right: 1em;'><img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></h3></div> -->
 <br>
         <div class="text-center">
 
