--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -149,7 +149,7 @@ PIN &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text">&nbsp;&nbsp;&nbsp;&nb
         </div></div>
  -->        <div class="col-sm-3"></div>
         </div>
-    <h3><a href="ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3><br>
+    <h3><a href="/ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3><br>
 
        <h3>Details about TS SBTET Results 2017: </h3>
        <ul>
@@ -192,7 +192,7 @@ PIN &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text">&nbsp;&nbsp;&nbsp;&nb
 <br>
 <div class="text-center">
 <b>
-<a href="/ap-apsbtet-results">TS SBTET C-16 Diploma Results March/April 2017</a><br>
+<a href="/ts-tssbtet-results">TS SBTET C-16 Diploma Results March/April 2017</a><br>
  <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
@@ -203,11 +203,11 @@ PIN &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text">&nbsp;&nbsp;&nbsp;&nb
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-<a href="/ap-apsbtet-results">TS SBTET C-14 Diploma Results March/April 2017</a><br>
+<a href="/ts-tssbtet-results">TS SBTET C-14 Diploma Results March/April 2017</a><br>
 
-<a href="/ap-apsbtet-results">TS SBTET C-09 Diploma Results March/April 2017</a><br>
+<a href="/ts-tssbtet-results">TS SBTET C-09 Diploma Results March/April 2017</a><br>
 
-<a href="/ap-apsbtet-results">TS SBTET ER-91 Pharmacy Diploma Results March/April 2017</a><br>
+<a href="/ts-tssbtet-results">TS SBTET ER-91 Pharmacy Diploma Results March/April 2017</a><br>
 </b>
 </div>
 <br>
