--- a/app/views/blogs/adminmain.html.erb
+++ b/app/views/blogs/adminmain.html.erb
@@ -48,12 +48,13 @@
               
                <ul>
                 
+                <li><a href="/ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
 
                <li><a href="/neet-results">NEET Results 2017 | NATIONAL ELIGIBILITY CUM ENTRANCE TEST RESULTS 2017<img border='0' src='https://1.bp.blogspot.com/-kuTiNgzcalM/VEZ2z310L5I/AAAAAAAAAGM/wHucEgI8Uc8IfVsO_xvDb_gm0mGS58swQCPcB/s1600/new.gif'/></a></li><br>
 
-                  <li><a href="/ap-apsbtet-results">AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
+                  
 
-                  <li><a href="/ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br>
+                  <!-- <li><a href="/ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></li><br> -->
               </ul>
 
             </div>
