--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-  <meta name='description' content=<%= yield(:description) %> >
+  <meta name='description' content="<%= yield(:description) %>" >
   <meta property="og:description" content="<%= yield(:description) %>" />
 
   <meta name="keywords" content="<%= yield(:keywords) %>">
