--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -1,7 +1,8 @@
-<% content_for :title, "AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 - neetgov.in" %>
+<% content_for :title, "AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 - manabadi" %>
 
-<% content_for :description, "Ap sbtet results 2017 available soon for c16, c14, c09 April/march sbtet diploma results 2017"%>
-<% content_for :time, "2017-05-25T14:50:00+05:30" %>
+<% content_for :description, "Ap sbtet results 2017 available soon for c16, c14, c09 April/march sbtet diploma results 2017 AP SBTET Diploma Results March 2017: State Board of Technical Education & Training Andhra Pradesh has announced the Diploma C14, C09 & ER-91 Manabadi Results April / May 2017 at schools9.com. Candidates who are eagerly waiting for AP SBTET Diploma results March/April 2017 can download it from the Andhra Pradesh SBTET official page, sbtetap.gov.in The Andhra Pradesh SBTET Diploma"%>
+<% content_for :time, "2017-05-25T16:00:56+00:00" %>
+<% content_for :keywords, "diploma result, sbtet c09, sbtet c09 results, ap results, ts results, sbtet world, C16, C14, SBTET Diploma Results March 2017" %>
 <meta property="og:image" content="assets/AP-SBTET-RESULTS-b899841c9860865de2c3a2aafc22389ae0b97928b91ed27948e78807accf2d20.png"/>
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
