--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -1,6 +1,7 @@
 <% content_for :title, "TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 - www.neetgov.in" %>
 <% content_for :description, "TS sbtet results 2017 available soon for c16, c14, c09 April/march sbtet diploma results 2017"%>
 <% content_for :time, "2017-05-25T14:50:00+05:30" %>
+<% content_for :keywords, "diploma result, sbtet c09, sbtet c09 results, ap results, ts results, sbtet world, C16, C14, SBTET Diploma Results March 2017" %>
 <meta property="og:image" content="assets/TS-SBTET-RESULTS-018fae034ebb9ffbe2919af6e37507b1908bdd649f6c06a8c15c002bdcdc4cbc.jpg"/>
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
