--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -133,12 +133,12 @@ SBTET AP Diploma Results College wise, Andhra Pradesh SBTET Result name wise res
 State Board of Technical Education and Training Andhra Pradesh (SBTET AP)  will soon declare Dipoma (Polytechnic) Exams results in 2017. AP SBTET Board Polytechnic Results 2017 will be available at sbtetworld.in, indiaresults.com, manabadi.co.in, and schools9.com. Candidates can check SBTET Result 2017 live by visiting our website at result announcement time. And at results news sites are also provides the best information for the SBTET DIPLOMA UPDATES AND REULTS is SBTET WORLD, And AP SBTET Results 2017 Provided (Officially) Released Sites are sbtetap.gov.in,  Sbtetworld.in, indiaresults.com, School9,Etc. Below Links checking of Result.</p>
 
 <br>
-<h4><a href="/ap-apsbtet-results">Links AP SBTET Diploma results March/April 2017 will be Update Once Results Released
+<h4><a href="http://www.sbtetworld.in/2017/05/ap-sbtet-diploma-results-2017.html">Links AP SBTET Diploma results March/April 2017 will be Update Once Results Released
 Check Out Your Results Are Going To Be Released By AP SBTET <span class="text-danger">(Links Not Yet Updated)</span></a></h4>
 <br>
 <div class="text-center">
 <b>
-<a href="/ap-apsbtet-results">AP SBTET C-16 Diploma Results March/April 2017</a><br>
+<a href="http://www.sbtetworld.in/2017/05/ap-sbtet-diploma-results-2017.html">AP SBTET C-16 Diploma Results March/April 2017</a><br>
  <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- school9edu_main_Blog1_1x1_as -->
                     <ins class="adsbygoogle"
@@ -149,11 +149,11 @@ Check Out Your Results Are Going To Be Released By AP SBTET <span class="text-da
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
-<a href="/ap-apsbtet-results">AP SBTET C-14 Diploma Results March/April 2017</a><br>
+<a href="http://www.sbtetworld.in/2017/05/ap-sbtet-diploma-results-2017.html">AP SBTET C-14 Diploma Results March/April 2017</a><br>
 
-<a href="/ap-apsbtet-results">AP SBTET C-09 Diploma Results March/April 2017</a><br>
+<a href="/http://www.sbtetworld.in/2017/05/ap-sbtet-diploma-results-2017.html">AP SBTET C-09 Diploma Results March/April 2017</a><br>
 
-<a href="/ap-apsbtet-results">AP SBTET ER-91 Pharmacy Diploma Results March/April 2017</a><br>
+<a href="http://www.sbtetworld.in/2017/05/ap-sbtet-diploma-results-2017.html">AP SBTET ER-91 Pharmacy Diploma Results March/April 2017</a><br>
 </b>
 </div>
 <br>
