--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -4,6 +4,32 @@
 <% content_for :time, "2017-05-25T16:00:56+00:00" %>
 <% content_for :keywords, "diploma result, sbtet c09, sbtet c09 results, ap results, ts results, sbtet world, C16, C14, SBTET Diploma Results March 2017" %>
 <meta property="og:image" content="assets/AP-SBTET-RESULTS-b899841c9860865de2c3a2aafc22389ae0b97928b91ed27948e78807accf2d20.png"/>
+
+<style type="text/css">
+    #box {
+border: 2px double #000;
+outline-offset: -9px;
+}
+input[type=text] {
+   
+    background-color:#87CEFA;
+    color: black;
+}
+</style>
+
+<script>
+var myVar;
+function myFunction() {
+    document.getElementById('demo').innerHTML="Results will be Available today or Tomorrow"
+    window.open("http://www.sbtetworld.in/2017/06/ap-sbtet-diploma-results-2017.html");
+    // myVar=setInterval(time, 3000);
+    // function time(){
+    //     location.reload()
+    // }
+    
+}
+</script>
+
  <div class="container text-justify" style="padding-left:13%px;padding-right:13%px;">
 
  <div class="panel" style="padding-left: 8%; padding-right: 8%; padding-top:5%; padding-bottom: 5%">
@@ -23,7 +49,37 @@
             <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ap-apsbtet-results" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
 </div><!-- /.social-share -->
 <br>
+    
+    <br>
+<div id="box" class="text-center"><br>
+<h3 class="text-center">DEPLOMA RESUKTS</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
+<p class="text-center text-danger"><b><span id="demo"></span></b></p>
+<span ><b>Schema  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<select>
+  <option value="volvo">C05</option>
+  <option value="saab">C08</option>
+  <option value="mercedes">C09</option>
+  <option value="audi">C14</option>
+  <option value="audi">ER91</option>
+</select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+PIN &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <button onclick="myFunction()">Get Results</button></span>
+<script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- school9edu_main_Blog1_1x1_as -->
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-7665698555914778"
+                         data-ad-slot="9074553645"
+                         data-ad-format="auto"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+<!-- <a href="/ap-ecet-results"><h3>AP ECET RESULTS</h3></a> -->
+ </div>
+ <br>
 
+</b>
+<br>
         
        <p><b class="text-success">AP SBTET Results 2017:</b> State Board of Technical Education and Training, Andhra Pradesh State (AP SBTET) The state boards of technical education & training of Andhra Pradesh conducts the diploma examinations twice in a year. These examinations are conducts in summer like March/April and winter exams are conducts in Oct/Nov respectively.’ The Director of Public Instruction (D.P.I.) used to head the Technical Education also at the time of formation of Andhra Pradesh. To help speed up the process of development of Technical Education, a Board in the name and style of "STATE BOARD OF TECHNICAL EDUCATION AND TRAINING", Government of Andhra Pradesh. The AP SBTET is responsible for conducting the Diploma/Polytechnic Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 Examinations and some minor examinations in the state of Andhra Pradesh. This year More than 1.5 Lakhs students appeared for the ‘sbtet‘ examination. Every year Semester Board conducts SBTET exams in a very professional way and tries to evaluate the papers in 45-50 Days from the completion date of exams. This year Andhra Pradesh SBTET Results 2017 expected in the month of May. However, the decision will be taken by AP SBTET board soon and will release a press note, which will be published on this website.
        </p>
@@ -55,51 +111,9 @@ State Board of Technical Education, Andhra Pradesh successfully conducted Diplom
 
            
         </div>
-<div class="row">
-<div class="col-sm-2"></div>
-    <div class="col-sm-7 text-center">
-    <div class="ibox-content">
-     <% if notice %>
-                  <div class="alert alert-success alert-dismissible" role="alert">
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                      <%= notice %> <i class="fa fa-smile-o" aria-hidden="true"></i>
 
-                  </div>
-                  <% end %>
-                  <% if alert %>
-                  <div class="alert alert-warning alert-dismissible" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <%= alert %>
-                  </div>
-                  <% end %>
-        <%= simple_form_for @subscribe, :input_html => {:id => "form_id", :class => "form-horizontal"}, url: {action: "subscribed", method: "post"} do |f| %>
-        <%= @subscribe.errors.full_messages.first if @subscribe.errors.any? %>
-            <%= f.hidden_field :state, :value => "ap" %>
-             <%= f.input :name, :label => false, :placeholder => "Name", :required => true, :input_html => {:class  => "form-horizontal"} %>
-             <%= f.input :email, :label => false,  :required => true, :placeholder => "Example@email.com", :input_html => {:class  => "form-horizontal"} %>
-             <%= f.input :pin, :label => false,  :required => true, :placeholder => "10201-EE-054", :input_html => {:class  => "form-horizontal"} %>
-             <%= f.input :mobile, :label => false,  :required => true, :placeholder => "Mobile number", :input_html => {:class  => "form-horizontal", :pattern => "[789][0-9]{9}", :max => 10, :min => 10, :title =>"Provide valid phone number"} %>
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- school9edu_main_Blog1_1x1_as -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-7665698555914778"
-           data-ad-slot="9074553645"
-           data-ad-format="auto"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-  <div class="actions">
-    <%= f.submit "Submit", :class => "btn btn-primary block full-width m-b", :width => "70%" %>
-  </div>
-
-        <% end %><hr>
-        </div></div>
-        <div class="col-sm-3"></div>
-        </div>
-      
-      <h3><a href="ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3><br>
-
+     <!--  <h3><a href="ts-tssbtet-results">TS SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017</a></h3><br>
+ -->
        <h3>Details about AP SBTET Results 2017:</h3>
        <ul>
        <li><b>
