--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017 - manabadi" %>
 
 <% content_for :description, "Ap sbtet results 2017 available soon for c16, c14, c09 April/march sbtet diploma results 2017 AP SBTET Diploma Results March 2017: State Board of Technical Education & Training Andhra Pradesh has announced the Diploma C14, C09 & ER-91 Manabadi Results April / May 2017 at schools9.com. Candidates who are eagerly waiting for AP SBTET Diploma results March/April 2017 can download it from the Andhra Pradesh SBTET official page, sbtetap.gov.in The Andhra Pradesh SBTET Diploma"%>
-<% content_for :time, "2017-05-25T16:00:56+00:00" %>
+<% content_for :time, Time.now %>
 <% content_for :keywords, "diploma result, sbtet c09, sbtet c09 results, ap results, ts results, sbtet world, C16, C14, SBTET Diploma Results March 2017" %>
 <meta property="og:image" content="assets/AP-SBTET-RESULTS-b899841c9860865de2c3a2aafc22389ae0b97928b91ed27948e78807accf2d20.png"/>
 
@@ -40,13 +40,13 @@ function myFunction() {
 <div class="social-share">
     <h4>Share on</h4>
     
-            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.neetgov.in/ap-apsbtet-results" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-twitter"></i><span> Twitter</span></a>
+            <a class="btn btn-info" href="https://twitter.com/intent/tweet?text=http://www.results.neetgov.in/ap-apsbtet-results" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-twitter"></i><span> Twitter</span></a>
        
-            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.neetgov.in/ap-apsbtet-results& t=AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-facebook"></i><span> Facebook</span></a>
+            <a class="btn btn-success" href="https://www.facebook.com/sharer/sharer.php?u=http://www.results.neetgov.in/ap-apsbtet-results& t=AP SBTET Results 2017 | SBTET Diploma Results C16, C14, C09 & ER-91 Pharmacy March/April 2017" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-facebook"></i><span> Facebook</span></a>
 
-            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.neetgov.in/ap-apsbtet-results"  class="google-plus" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-google-plus"></i><span> Google+</span></a>
+            <a class="btn btn-danger" href="https://plus.google.com/share?url=http://www.results.neetgov.in/ap-apsbtet-results"  class="google-plus" onclick='window.open(this.href,"   sharer"   ,"   toolbar=0,status=0,width=626,height=436"   );   return false;' rel='nofollow'><i class="fa fa-google-plus"></i><span> Google+</span></a>
 
-            <a class="btn btn-success" href="whatsapp://send?text=http://www.neetgov.in/ap-apsbtet-results" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
+            <a class="btn btn-success" href="whatsapp://send?text=http://www.results.neetgov.in/ap-apsbtet-results" class="whatsapp" title="Share on WhatsApp" data-action="share/whatsapp/share" target='_blank'><i class="fa fa-whatsapp"></i><span> Whatsapp</span></a>
 </div><!-- /.social-share -->
 <br>
     
