--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -20,8 +20,8 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="Results will be Available today or Tomorrow"
-    window.open("http://www.sbtetworld.in/2017/06/ap-sbtet-diploma-results-2017.html");
+    document.getElementById('demo').innerHTML="Results will be Available Today or Tomorrow"
+    // window.open("http://www.sbtetworld.in/2017/06/ap-sbtet-diploma-results-2017.html");
     // myVar=setInterval(time, 3000);
     // function time(){
     //     location.reload()
@@ -52,7 +52,7 @@ function myFunction() {
     
     <br>
 <div id="box" class="text-center"><br>
-<h3 class="text-center">DEPLOMA RESUKTS</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
+<h3 class="text-center">DEPLOMA RESULTS</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
 <p class="text-center text-danger"><b><span id="demo"></span></b></p>
 <span ><b>Schema  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <select>
