--- a/app/views/subscribe/tssubscribe.html.erb
+++ b/app/views/subscribe/tssubscribe.html.erb
@@ -74,7 +74,7 @@ State Board of Technical Education, Telangana successfully conducted Diploma / P
 
 <br>
 <div id="box" class="text-center"><br>
-<h3 class="text-center">DEPLOMA RESUKTS</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
+<h3 class="text-center">DEPLOMA RESULTS</h3><hr style="height:1px;border:none;color:#333;background-color:#333";>
 <p class="text-center text-danger"><b><span id="demo"></span></b></p>
 <span ><b>Schema  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <select>
