--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -20,7 +20,7 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="Results will be Available Today or Tomorrow"
+    document.getElementById('demo').innerHTML="Results will be soon.."
     // window.open("http://www.sbtetworld.in/2017/06/ap-sbtet-diploma-results-2017.html");
     // myVar=setInterval(time, 3000);
     // function time(){
