--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -20,8 +20,8 @@ input[type=text] {
 <script>
 var myVar;
 function myFunction() {
-    document.getElementById('demo').innerHTML="AP SBTET Results will be Available Soon.."
-    // window.open("http://www.sbtetworld.in/2017/06/ap-sbtet-diploma-results-2017.html");
+    document.getElementById('demo').innerHTML="AP SBTET Results Available Now"
+     window.open("http://www.sbtetworld.in");
     // myVar=setInterval(time, 3000);
     // function time(){
     //     location.reload()
@@ -56,11 +56,10 @@ function myFunction() {
 <p class="text-center text-danger"><b><span id="demo"></span></b></p>
 <span ><b>Schema  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <select>
-  <option value="volvo">C05</option>
-  <option value="saab">C08</option>
-  <option value="mercedes">C09</option>
-  <option value="audi">C14</option>
+  <option value="volvo">C16</option>
+  <option value="saab">C14</option>
   <option value="audi">ER91</option>
+<option value="saab">C09</option>
 </select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 PIN &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  <button onclick="myFunction()">Get Results</button></span>
