--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -118,7 +118,7 @@ State Board of Technical Education, Andhra Pradesh successfully conducted Diplom
        <li><b>
       Organization / Board:  State Board of Technical Education & Training (SBTET) AP</b></li>
       <li><b>Category: AP SBTET Diploma Regular/ Supply Examinations 2017 [C16, C14, C09, ER91] Results</b></li>
-      <li><b>Status:  AP SBTET Diploma Results 2017 <i class="text-danger">(Not Yet Released)</i></b></li>
+      <li><b>Status:  AP SBTET Diploma Results 2017 <i style="color:green;">(Released)</i></b></li>
       <li><b>Official Website:  www.sbtet.gov.in</b></li>
       </ul>
       The Following Examinations Results are released by SBTET AP:<br>
@@ -147,7 +147,7 @@ State Board of Technical Education and Training Andhra Pradesh (SBTET AP)  will 
 
 <br>
 <h4><a href="http://www.sbtetworld.in/2017/05/ap-sbtet-diploma-results-2017.html">Links AP SBTET Diploma results March/April 2017 will be Update Once Results Released
-Check Out Your Results Are Going To Be Released By AP SBTET <span class="text-danger">(Links Not Yet Updated)</span></a></h4>
+Check Out Your Results Are Going To Be Released By AP SBTET <span style="color:green;">(Links Updated)</span></a></h4>
 <br>
 <div class="text-center">
 <b>
