--- a/app/views/subscribe/apsubscribe.html.erb
+++ b/app/views/subscribe/apsubscribe.html.erb
@@ -146,8 +146,7 @@ SBTET AP Diploma Results College wise, Andhra Pradesh SBTET Result name wise res
 State Board of Technical Education and Training Andhra Pradesh (SBTET AP)  will soon declare Dipoma (Polytechnic) Exams results in 2017. AP SBTET Board Polytechnic Results 2017 will be available at sbtetworld.in, indiaresults.com, manabadi.co.in, and schools9.com. Candidates can check SBTET Result 2017 live by visiting our website at result announcement time. And at results news sites are also provides the best information for the SBTET DIPLOMA UPDATES AND REULTS is SBTET WORLD, And AP SBTET Results 2017 Provided (Officially) Released Sites are sbtetap.gov.in,  Sbtetworld.in, indiaresults.com, School9,Etc. Below Links checking of Result.</p>
 
 <br>
-<h4><a href="http://www.sbtetworld.in/2017/05/ap-sbtet-diploma-results-2017.html">Links AP SBTET Diploma results March/April 2017 will be Update Once Results Released
-Check Out Your Results Are Going To Be Released By AP SBTET <span style="color:green;">(Links Updated)</span></a></h4>
+<h2>AP SBTET DIPLOMA RESULTS 2017 MARCH/APRIL C16, C14, C09 AND ER-91 PHARMACY AVAILABLE NOW</h2>
 <br>
 <div class="text-center">
 <b>
